apps/akhq/50.Service.yml
kind: Service
apiVersion: v1
metadata:
  name: akhq
  namespace: akhq
  labels:
    app.kubernetes.io/component: akhq
    app.kubernetes.io/name: akhq
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: akhq
  selector:
    app.kubernetes.io/component: akhq
    app.kubernetes.io/name: akhq
  sessionAffinity: None
  type: ClusterIP
