apps/akhq/60.Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: akhq-ingress
  namespace: akhq
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: nginx-ingress-microk8s
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    prometheus.io/port: '9113'
spec:
  ingressClassName: public
  rules:
  - host: akhq.prod.k8s.home
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: akhq
              port:
                number: 80
